# rec-sys-app

./: .gitignore  Containerfile  README.md  dataset_gen.py  dataset_gen_amazon.py  driver.py  entry_point.sh  pyproject-generation.toml  pyproject.toml  requirements.txt  train-workflow.py
feature_repo/: data_sources.py  entities.py  feature_services.py  feature_store.yaml  feature_views.py  service-ca.crt
feature_repo/data/: dummy_item_embed.parquet  dummy_user_embed.parquet  interactions_item_user_ids.parquet  item_clip_features_embed.parquet  item_textual_features_embed.parquet  neg_interactions_item_user_ids.parquet  recommendation_interactions.parquet  recommendation_items.parquet  recommendation_neg_interactions.parquet  recommendation_users.parquet  registry.db  user_items.parquet
generation/: dataset_gen_amazon.py  generate_images.py
generation/data/: item_df_base.parquet
models/: clip_example.py  data_util.py  entity_tower.py  filtering.py  item_tower.py  train_two_tower.py  two_tower.py  user_tower.py
service/: clip_encoder.py  dataset_provider.py  search_by_image.py  search_by_text.py
tests/: test_clip_encoder.py  test_create_and_train_two_tower.py  test_data_util.py  test_entity_tower.py  test_search_service.py
tests/data/: item_df_output.parquet
