[project]
name = "rec-sys-app"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "feast[postgres]==0.48.1",
    "grpcio>=1.71.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "transformers>=4.52.4",
]
